[project]
name = "heatmapts"
version = "0.1.0"
description = "The classical time series heatmap plot extended with a mean profile and daily average and peaks."
readme = "README.md"
authors = [
    { name = "Markus Kreft", email = "mail@mkreft.de" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.2.240807",
]
